web-infras/parser/tests/fixtures/babel/es2015/uncategorised/294/output.txt
[SyntaxError]: Invalid rest elements. (1,5)
1|(b, ...a)
 |   ^
